# immi

./: .gitignore  README.md
adviser/: go.mod  main.go
analyzer/: CMakeLists.txt
analyzer/src/: entities.h  main.cpp
data/: companylist.csv  imt_sandbox.sqlite
data_miner/: miner.py  output
data_miner/bybit/: go.mod  loop_finder.cpp  main.go  routes.txt
data_miner/bybit/rust_subscriber/: Cargo.toml  run.sh  run_release.sh
data_miner/bybit/rust_subscriber/src/: algo.rs  fs_cache.rs  helpers.rs  main.rs  market_data.rs  objects.rs  trades_processor.rs  trades_updater.rs  updater.rs
data_miner/bybit/test_data/: edges_180.txt  edges_30.txt  edges_90.txt
data_miner/go_miner/: go.mod  go.sum  main.go  model.go  schema.sql
data_miner/go_miner/db_wrapper/: db_cli.go  objects.go
data_miner/go_miner/helper/: helper.go
data_miner/go_miner/logger/: log_helper.go
data_miner/go_miner/miner/: history.go  instruments.go
data_miner/go_miner/tink_wrapper/: tink_cli.go
data_miner/tink_parser/: go.mod  main.go
data_miner/tink_parser/db_wrapper/: db_cli.go  objects.go
data_miner/tink_parser/helper/: helper.go
data_miner/tink_parser/logger/: log_helper.go
data_miner/tink_parser/miner/: history.go
data_miner/tink_parser/tink_wrapper/: tink_cli.go
data_miner/tink_parser/tsignal/: signal.go
data_miner/tink_script/: README.md  download.sh  figi.txt
rebalance_visualizer/: index.html  script.js  style.css
rebalance_visualizer/data/: CCL_dollar.csv  GAZP.ME.csv  MTSS.ME.csv  SBER.ME.csv  YNDX_dollar.csv
tink_data_miner/go_miner/db_wrapper/: db_cli.go
