[package]
name = "rust_subscriber"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-bybit = "0.2"
crypto-rest-client = "1.0.1"
drain-while = "0.1.0"
log = "0.4.20"
env_logger = "0.10.0"
logging_timer = "1.1.0"